--- a/paper/Introduction.tex
+++ b/paper/Introduction.tex
@@ -1,4 +1,4 @@
 \section{Introduction}
 Since its creation in 1991, Python has risen to become one of the world's most popular programming languages. This rise has not come without significant challenges, however. One of the most notable challenges that Python encountered was the transition from version 2 of the language to version 3. Python 3 introduced a vast number of new features and quality-of-life improvements for Python programmers. However the vast number of changes also meant that most code written in Python 2 was not compatible with the new version, which resulted in a multi-year long transition period where developers had to either migrate their Python 2 codebases to Python 3 or improvise solutions to let their codebases work in both Python 2 and 3. One migration solution was the use of Python 2 to 3 translators, especially 2to3, the official Python 2 to 3 translator created by the Python Software Foundation (PSF), the organization which manages the development of the Python language. However, 2to3 was not able to address all aspects of the 2 to 3 transition, so the usage of translators like 2to3 eventually fell in favor of maintaining codebases that can work under both versions of Python \autocite{Malloy}.
 
-Although 2to3 is an effective software program, the vulnerability of software like 2to3 to edge cases --- situations which occur so rarely developers may not foresee their software encountering them, thus leading to bugs in their software --- has resulting in the rising popularity of \textit{formal verification} --- the practice of verifying that a program conforms to a defined specification with the rigor of a mathematical proof. Such verification means all possible cases are accounted for, meaning that edge cases are impossible if the specification is defined well enough. Currently, most real-world application of formal verification is in industries such as aviation, rail, and computer chip design where having software that can be proven to do what developers believe it should do is of the utmost importance \autocite{Woodcock}. However, research into the application of formal verification into other areas is ongoing. The purpose of this research is to study the effectiveness of using formal verification to create and verify a Python 2 to 3 translator.
+Although 2to3 is an effective software program, the vulnerability of software like 2to3 to edge cases --- situations which occur so rarely developers may not foresee their software encountering them, thus leading to bugs in their software --- has resulting in the rising popularity of \textit{formal verification} --- the practice of verifying that a program conforms to a defined specification with the rigor of a mathematical proof. Such verification means all possible cases are accounted for, meaning that edge cases are impossible if the specification is defined well enough. Currently, formal verification is a niche field, with most real-world application of formal verification in industries such as aviation, rail, and computer chip design where having software that can be proven to do what developers believe it should do is of the utmost importance \autocite{Woodcock}. However, research into the application of formal verification into other areas is ongoing. The purpose of this research is to study the effectiveness of using formal verification to create and verify a Python 2 to 3 translator.
