--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -46,7 +46,13 @@
   number   = {3}
 }
 
-@manual{Filliâtre,
+@online{Coq,
+  author = {Coq},
+  title  = {What is Coq?},
+  url    = {https://coq.inria.fr/about-coq}
+}
+
+@manual{Filliatre,
   author = {Filliâtre, Jean-Christophe and Letouzey, Pierre},
   title  = {Program extraction},
   url    = {https://coq.inria.fr/doc/v8.13/refman/addendum/extraction.html}
@@ -138,6 +144,20 @@
   numpages  = {11},
   location  = {Vancouver, BC, Canada},
   series    = {NIPS'20}
+}
+
+@misc{Souyris,
+  author = {Souyris, J.},
+  title  = {Industrial Use of CompCert on a Safety-Critical
+            Software Product},
+  url    = {https://projects.laas.fr/IFSE/FMF/J3/slides/P05_Jean_Souyiris.pdf},
+  year   = 2014
+}
+
+@online{Sunsetting,
+  author = {Python Software Foundation},
+  title  = {Sunsetting Python 2},
+  url    = {https://www.python.org/doc/sunset-python-2/}
 }
 
 @online{vanRossum,
