--- a/paper/main.tex
+++ b/paper/main.tex
@@ -29,7 +29,8 @@
 \printbibliography
 
 \appendix
-\include{Source Code}
 \include{Tests}
 \include{Data}
+\include{Source Code}
+\include{Helper Script}
 \end{document}
