--- a/paper/Source Code.tex
+++ b/paper/Source Code.tex
@@ -1,3 +1,5 @@
+% Taken from Stack Overflow
+
 \definecolor{dkgreen}{rgb}{0,0.6,0}
 \definecolor{ltblue}{rgb}{0,0.4,0.4}
 \definecolor{dkviolet}{rgb}{0.3,0,0.5}
@@ -63,15 +65,15 @@
     % Style for (listings') identifiers
     identifierstyle={\ttfamily\color{black}},
     % Style for declaration keywords
-    keywordstyle=[1]{\ttfamily\color{dkviolet}},
+    keywordstyle=[1]{\ttfamily\color{violet}},
     % Style for gallina keywords
-    keywordstyle=[2]{\ttfamily\color{dkgreen}},
+    keywordstyle=[2]{\ttfamily\color{green}},
     % Style for sorts keywords
     keywordstyle=[3]{\ttfamily\color{ltblue}},
     % Style for tactics keywords
-    keywordstyle=[4]{\ttfamily\color{dkblue}},
+    keywordstyle=[4]{\ttfamily\color{blue}},
     % Style for terminators keywords
-    keywordstyle=[5]{\ttfamily\color{dkred}},
+    keywordstyle=[5]{\ttfamily\color{red}},
     %Style for iterators
     %keywordstyle=[6]{\ttfamily\color{dkpink}},
     % Style for strings
@@ -103,7 +105,8 @@
     %
 }[keywords,comments,strings]
 
-\section{Source Code}
+\section{fix-print Source Code}
+\label{appendix:Source-Code}
 
 \begin{lstlisting}[language=Coq]
     Require Import String.
@@ -243,7 +246,8 @@
         (match n with
         | LEAF RIGHTSHIFT :: LEAF (NAME f) :: n' => 
         match rev n' with
-        | LEAF COMMA :: n'' => rev n'' ++ [LEAF COMMA ; LEAF (NAME "end") ; LEAF EQUAL ; LEAF (STRING " ") ; LEAF COMMA; LEAF (NAME "file") ; LEAF EQUAL ; LEAF (NAME f)]
+        | LEAF COMMA :: n'' => rev n'' ++  [LEAF COMMA ; LEAF (NAME "end") ; LEAF EQUAL ; LEAF (STRING " ") ; LEAF COMMA; 
+            LEAF (NAME "file") ; LEAF EQUAL ; LEAF (NAME f)]
         | _ => match n' with
                 | LEAF COMMA :: n'' => n' ++ [LEAF COMMA; LEAF (NAME "file") ; LEAF EQUAL ; LEAF (NAME f)]
                 | _ => n' ++ [LEAF (NAME "file") ; LEAF EQUAL ; LEAF (NAME f)]
@@ -257,13 +261,15 @@
     | _ => [LEAF (NAME "print") ; LEAF LPAR ; LEAF RPAR]
     end.
 
-    Lemma output_starts_with_print : forall n : list tree,  nth 0 (fix_print (LEAF (NAME "print") :: n)) (NODE []) = LEAF (NAME "print").
+    Lemma output_starts_with_print : forall n : list tree, 
+        nth 0 (fix_print (LEAF (NAME "print") :: n)) (NODE []) = LEAF (NAME "print").
     destruct n.
     - simpl. reflexivity.
     - simpl. reflexivity.
     Qed.
 
-    Lemma output_begins_with_parentheses : forall n : list tree, nth 1 ((fix_print (LEAF (NAME "print") :: n))) (NODE []) = LEAF LPAR.
+    Lemma output_begins_with_parentheses : forall n : list tree,
+        nth 1 ((fix_print (LEAF (NAME "print") :: n))) (NODE []) = LEAF LPAR.
     destruct n ; auto.
     Qed.
 
